--- a/PROX/FOUNDATION/MESH_ARRAY/unit_tests/mesh_array_io/CMakeLists.txt
+++ b/PROX/FOUNDATION/MESH_ARRAY/unit_tests/mesh_array_io/CMakeLists.txt
@@ -1,14 +1,8 @@
-CONFIGURE_FILE(
+configure_file(
   "${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/unit_tests/mesh_array_io/mesh_array_data_path.h.in"
   "${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/unit_tests/mesh_array_io/mesh_array_data_path.h"
   @ONLY
   )
-
-INCLUDE_DIRECTORIES( 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include  
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include
-  ${Boost_INCLUDE_DIRS}
-)
 
 add_executable(
   unit_mesh_array_io 
@@ -20,11 +14,9 @@ target_link_libraries(
   unit_mesh_array_io
   Boost::unit_test_framework
   mesh_array
-  tiny
   )
 
 add_test( 
   unit_mesh_array_io
   unit_mesh_array_io
   )
-
