--- a/PROX/SIMULATION/KDOP/unit_tests/kdop_make_tree/CMakeLists.txt
+++ b/PROX/SIMULATION/KDOP/unit_tests/kdop_make_tree/CMakeLists.txt
@@ -1,11 +1,3 @@
-INCLUDE_DIRECTORIES(
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include 
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/KDOP/KDOP/include 
-  ${Boost_INCLUDE_DIRS}
-  )
-
 add_executable(
   unit_kdop_make_tree
   kdop_make_tree.cpp
@@ -13,12 +5,7 @@ add_executable(
 
 target_link_libraries(
   unit_kdop_make_tree
-  tiny
-  geometry
-  mesh_array
-  tetgen
-  ${Boost_SYSTEM_LIBRARY}
-  ${Boost_FILESYSTEM_LIBRARY}
+  kdop
   Boost::unit_test_framework
   )
 
@@ -26,4 +13,3 @@ add_test(
   unit_kdop_make_tree
   unit_kdop_make_tree
   )
-
