--- a/PROX/SIMULATION/KDOP/unit_tests/kdop_traversal/CMakeLists.txt
+++ b/PROX/SIMULATION/KDOP/unit_tests/kdop_traversal/CMakeLists.txt
@@ -1,12 +1,3 @@
-INCLUDE_DIRECTORIES( 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include 
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/KDOP/KDOP/include 
-  ${Boost_INCLUDE_DIRS}
-  )
-
 add_executable(
   unit_kdop_traversal
   kdop_traversal.cpp
@@ -14,13 +5,7 @@ add_executable(
 
 target_link_libraries(
   unit_kdop_traversal
-  tiny
-  geometry
-  mesh_array
-  tetgen
-  util
-  ${Boost_SYSTEM_LIBRARY}
-  ${Boost_FILESYSTEM_LIBRARY}
+  kdop
   Boost::unit_test_framework
   )
 
