--- a/PROX/FOUNDATION/MESH_ARRAY/unit_tests/mesh_array_tetgen/CMakeLists.txt
+++ b/PROX/FOUNDATION/MESH_ARRAY/unit_tests/mesh_array_tetgen/CMakeLists.txt
@@ -1,14 +1,8 @@
-CONFIGURE_FILE(
+configure_file(
   "${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/unit_tests/mesh_array_tetgen/mesh_array_data_path.h.in"
   "${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/unit_tests/mesh_array_tetgen/mesh_array_data_path.h"
   @ONLY
   )
-
-INCLUDE_DIRECTORIES( 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include  
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include
-  ${Boost_INCLUDE_DIRS}
-)
 
 add_executable(
   unit_mesh_array_tetgen 
@@ -18,13 +12,11 @@ add_executable(
 
 target_link_libraries(
   unit_mesh_array_tetgen
-  Boost::unit_test_framework
   mesh_array
-  tiny
+  Boost::unit_test_framework
   )
 
 add_test( 
   unit_mesh_array_tetgen
   unit_mesh_array_tetgen
   )
-
