--- a/PROX/FOUNDATION/SPARSE/unit_tests/sparse_element_prod/CMakeLists.txt
+++ b/PROX/FOUNDATION/SPARSE/unit_tests/sparse_element_prod/CMakeLists.txt
@@ -1,9 +1,3 @@
-INCLUDE_DIRECTORIES( 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include 
-  ${Boost_INCLUDE_DIRS}
-)
-
 add_executable(
   unit_sparse_element_prod
   sparse_element_prod.cpp
@@ -11,7 +5,7 @@ add_executable(
 
 target_link_libraries(
   unit_sparse_element_prod
-  util
+  sparse
   Boost::unit_test_framework
   )
 
