--- a/PROX/FOUNDATION/TINY/unit_tests/tiny_contiguous_interval/CMakeLists.txt
+++ b/PROX/FOUNDATION/TINY/unit_tests/tiny_contiguous_interval/CMakeLists.txt
@@ -1,8 +1,3 @@
-INCLUDE_DIRECTORIES( 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
-  ${Boost_INCLUDE_DIRS}
-  )
-
 add_executable(
   unit_tiny_contiguous_interval
   tiny_contiguous_interval.cpp
@@ -10,6 +5,7 @@ add_executable(
 
 target_link_libraries(
   unit_tiny_contiguous_interval
+  tiny
   Boost::unit_test_framework
   )
 
