--- a/PROX/FOUNDATION/TINY/unit_tests/tiny_vector_algebra/CMakeLists.txt
+++ b/PROX/FOUNDATION/TINY/unit_tests/tiny_vector_algebra/CMakeLists.txt
@@ -1,8 +1,3 @@
-INCLUDE_DIRECTORIES( 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
-  ${Boost_INCLUDE_DIRS}
-  )
-
 add_executable(
   unit_tiny_vector_algebra
   tiny_vector_algebra.cpp
@@ -10,6 +5,7 @@ add_executable(
 
 target_link_libraries(
   unit_tiny_vector_algebra
+  tiny
   Boost::unit_test_framework
   )
 
@@ -17,4 +13,3 @@ add_test(
   unit_tiny_vector_algebra
   unit_tiny_vector_algebra
   )
-
