--- a/PROX/SIMULATION/BROAD/unit_tests/broad_all_pair_overlap/CMakeLists.txt
+++ b/PROX/SIMULATION/BROAD/unit_tests/broad_all_pair_overlap/CMakeLists.txt
@@ -1,10 +1,3 @@
-INCLUDE_DIRECTORIES( 
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include  
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include
-${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
-  ${Boost_INCLUDE_DIRS}
-  )
-
 add_executable(
   unit_broad_all_pair_overlap
   broad_all_pair_overlap.cpp
@@ -12,8 +5,7 @@ add_executable(
 
 target_link_libraries(
   unit_broad_all_pair_overlap
-  tiny
-  util
+  broad
   Boost::unit_test_framework
   )
 
@@ -21,5 +13,3 @@ add_test(
   unit_broad_all_pair_overlap
   unit_broad_all_pair_overlap
   )
-
-
