--- a/PROX/SIMULATION/BROAD/BROAD/CMakeLists.txt
+++ b/PROX/SIMULATION/BROAD/BROAD/CMakeLists.txt
@@ -18,6 +18,12 @@ target_include_directories(broad
   ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include
   )
 
+target_link_libraries(broad
+  PUBLIC
+  tiny
+  util
+  )
+
 install(
   TARGETS broad
   RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib/}
