--- a/PROX/FOUNDATION/GEOMETRY/unit_tests/CMakeLists.txt
+++ b/PROX/FOUNDATION/GEOMETRY/unit_tests/CMakeLists.txt
@@ -40,5 +40,5 @@ add_subdirectory( geometry_contacts_obb_obb                )
 add_subdirectory( geometry_contacts_obb_cylinder           )
 add_subdirectory( geometry_contacts_sphere_tetrahedron     )
 add_subdirectory( geometry_contacts_tetrahedron_tetrahedron)
-add_subdirector( geometry_gauss_map_of_convex_polyhedra   )
+add_subdirectory( geometry_gauss_map_of_convex_polyhedra   )
 add_subdirectory( geometry_closest_points_tetrahedron_tetrahedron   )
