--- a/PROX/FOUNDATION/MESH_ARRAY/unit_tests/CMakeLists.txt
+++ b/PROX/FOUNDATION/MESH_ARRAY/unit_tests/CMakeLists.txt
@@ -1,15 +1,15 @@
-ADD_SUBDIRECTORY( mesh_array_tetrahedron           )
-ADD_SUBDIRECTORY( mesh_array_triangle              )
-ADD_SUBDIRECTORY( mesh_array_vertex                )
-ADD_SUBDIRECTORY( mesh_array_mesh                  )
-ADD_SUBDIRECTORY( mesh_array_vertex_attribute      )
-ADD_SUBDIRECTORY( mesh_array_triangle_attribute    )
-ADD_SUBDIRECTORY( mesh_array_tetrahedron_attribute )
-ADD_SUBDIRECTORY( mesh_array_io                    )
-ADD_SUBDIRECTORY( mesh_array_vertex_ring           )
-ADD_SUBDIRECTORY( mesh_array_adjacency             )
-ADD_SUBDIRECTORY( mesh_array_circulator            )
-ADD_SUBDIRECTORY( mesh_array_tetgen                )
-ADD_SUBDIRECTORY( mesh_array_orientation           )
-ADD_SUBDIRECTORY( mesh_array_compute_distance_map  )
-ADD_SUBDIRECTORY( mesh_array_compute_surface_map   )
+add_subdirectory( mesh_array_tetrahedron           )
+add_subdirectory( mesh_array_triangle              )
+add_subdirectory( mesh_array_vertex                )
+add_subdirectory( mesh_array_mesh                  )
+add_subdirectory( mesh_array_vertex_attribute      )
+add_subdirectory( mesh_array_triangle_attribute    )
+add_subdirectory( mesh_array_tetrahedron_attribute )
+add_subdirectory( mesh_array_io                    )
+add_subdirectory( mesh_array_vertex_ring           )
+add_subdirectory( mesh_array_adjacency             )
+add_subdirectory( mesh_array_circulator            )
+add_subdirectory( mesh_array_tetgen                )
+add_subdirectory( mesh_array_orientation           )
+add_subdirectory( mesh_array_compute_distance_map  )
+add_subdirectory( mesh_array_compute_surface_map   )
