--- a/PROX/SIMULATION/BROAD/unit_tests/CMakeLists.txt
+++ b/PROX/SIMULATION/BROAD/unit_tests/CMakeLists.txt
@@ -1,2 +1,2 @@
-ADD_SUBDIRECTORY( broad_all_pair_overlap )
-ADD_SUBDIRECTORY( broad_grid_overlap     )
+add_subdirectory( broad_all_pair_overlap )
+add_subdirectory( broad_grid_overlap     )
