--- a/PROX/SIMULATION/KDOP/unit_tests/CMakeLists.txt
+++ b/PROX/SIMULATION/KDOP/unit_tests/CMakeLists.txt
@@ -1,5 +1,5 @@
-ADD_SUBDIRECTORY( kdop_mesh_reorder    			)
-ADD_SUBDIRECTORY( kdop_make_tree       			)
-ADD_SUBDIRECTORY( kdop_refit           			)
-ADD_SUBDIRECTORY( kdop_traversal       			)
-ADD_SUBDIRECTORY( kdop_raycast       			)
+add_subdirectory( kdop_mesh_reorder    			)
+add_subdirectory( kdop_make_tree       			)
+add_subdirectory( kdop_refit           			)
+add_subdirectory( kdop_traversal       			)
+add_subdirectory( kdop_raycast       			)
