--- a/PROX/SIMULATION/MASS/unit_tests/CMakeLists.txt
+++ b/PROX/SIMULATION/MASS/unit_tests/CMakeLists.txt
@@ -1,15 +1,15 @@
-ADD_SUBDIRECTORY( mass_box         )
-ADD_SUBDIRECTORY( mass_capsule     )
-ADD_SUBDIRECTORY( mass_cone        )
-ADD_SUBDIRECTORY( mass_cylinder    )
-ADD_SUBDIRECTORY( mass_density     )
-ADD_SUBDIRECTORY( mass_ellipsoid   )
-ADD_SUBDIRECTORY( mass_mesh        )
-ADD_SUBDIRECTORY( mass_rotate      )
-ADD_SUBDIRECTORY( mass_sphere      )
-ADD_SUBDIRECTORY( mass_tetrahedron )
-ADD_SUBDIRECTORY( mass_translate   )
-ADD_SUBDIRECTORY( mass_conical     )
-ADD_SUBDIRECTORY( mass_properties  )
-ADD_SUBDIRECTORY( mass_transform   )
+add_subdirectory( mass_box         )
+add_subdirectory( mass_capsule     )
+add_subdirectory( mass_cone        )
+add_subdirectory( mass_cylinder    )
+add_subdirectory( mass_density     )
+add_subdirectory( mass_ellipsoid   )
+add_subdirectory( mass_mesh        )
+add_subdirectory( mass_rotate      )
+add_subdirectory( mass_sphere      )
+add_subdirectory( mass_tetrahedron )
+add_subdirectory( mass_translate   )
+add_subdirectory( mass_conical     )
+add_subdirectory( mass_properties  )
+add_subdirectory( mass_transform   )
 
