--- a/PROX/SIMULATION/PROX/unit_tests/CMakeLists.txt
+++ b/PROX/SIMULATION/PROX/unit_tests/CMakeLists.txt
@@ -1,12 +1,12 @@
-ADD_SUBDIRECTORY( prox_binders                  )
-ADD_SUBDIRECTORY( prox_inverse_mass_matrix      )
-ADD_SUBDIRECTORY( prox_mass_block               )
-ADD_SUBDIRECTORY( prox_prod_jacobian_mass_block )
-ADD_SUBDIRECTORY( prox_prod_mass_jac            )
-ADD_SUBDIRECTORY( prox_prod_mass_vec            )
-ADD_SUBDIRECTORY( prox_mappings                 )
-ADD_SUBDIRECTORY( prox_solver                   )
-ADD_SUBDIRECTORY( prox_math_policy_functions    )
-ADD_SUBDIRECTORY( prox_position_vector          )
-ADD_SUBDIRECTORY( prox_velocity_vector          )
+add_subdirectory( prox_binders                  )
+add_subdirectory( prox_inverse_mass_matrix      )
+add_subdirectory( prox_mass_block               )
+add_subdirectory( prox_prod_jacobian_mass_block )
+add_subdirectory( prox_prod_mass_jac            )
+add_subdirectory( prox_prod_mass_vec            )
+add_subdirectory( prox_mappings                 )
+add_subdirectory( prox_solver                   )
+add_subdirectory( prox_math_policy_functions    )
+add_subdirectory( prox_position_vector          )
+add_subdirectory( prox_velocity_vector          )
 
