--- a/PROX/FOUNDATION/SPARSE/unit_tests/CMakeLists.txt
+++ b/PROX/FOUNDATION/SPARSE/unit_tests/CMakeLists.txt
@@ -1,21 +1,21 @@
-ADD_SUBDIRECTORY( sparse_block                 )
-ADD_SUBDIRECTORY( sparse_vector                )
-ADD_SUBDIRECTORY( sparse_diagonal_matrix       )
-ADD_SUBDIRECTORY( sparse_two_column_matrix     )
-ADD_SUBDIRECTORY( sparse_compressed_row_matrix )
-ADD_SUBDIRECTORY( sparse_transpose_block       )
-ADD_SUBDIRECTORY( sparse_transpose_crm         )
-ADD_SUBDIRECTORY( sparse_fake_transpose        )
-ADD_SUBDIRECTORY( sparse_product_block         )
-ADD_SUBDIRECTORY( sparse_product_crm_vec       )
-ADD_SUBDIRECTORY( sparse_product_crm_crm       )
-ADD_SUBDIRECTORY( sparse_diag_of_prod          )
-ADD_SUBDIRECTORY( sparse_prod_2cm_vec          )
-ADD_SUBDIRECTORY( sparse_sum                   )
-ADD_SUBDIRECTORY( sparse_io                    )
-ADD_SUBDIRECTORY( sparse_element_prod          )
-ADD_SUBDIRECTORY( sparse_inverse               )
-ADD_SUBDIRECTORY( sparse_row_product           )
-ADD_SUBDIRECTORY( sparse_column_product        )
-ADD_SUBDIRECTORY( sparse_compressed_vector     )
-ADD_SUBDIRECTORY( sparse_conjugate_gradient    )
+add_subdirectory( sparse_block                 )
+add_subdirectory( sparse_vector                )
+add_subdirectory( sparse_diagonal_matrix       )
+add_subdirectory( sparse_two_column_matrix     )
+add_subdirectory( sparse_compressed_row_matrix )
+add_subdirectory( sparse_transpose_block       )
+add_subdirectory( sparse_transpose_crm         )
+add_subdirectory( sparse_fake_transpose        )
+add_subdirectory( sparse_product_block         )
+add_subdirectory( sparse_product_crm_vec       )
+add_subdirectory( sparse_product_crm_crm       )
+add_subdirectory( sparse_diag_of_prod          )
+add_subdirectory( sparse_prod_2cm_vec          )
+add_subdirectory( sparse_sum                   )
+add_subdirectory( sparse_io                    )
+add_subdirectory( sparse_element_prod          )
+add_subdirectory( sparse_inverse               )
+add_subdirectory( sparse_row_product           )
+add_subdirectory( sparse_column_product        )
+add_subdirectory( sparse_compressed_vector     )
+add_subdirectory( sparse_conjugate_gradient    )
