--- a/PROX/FOUNDATION/TINY/unit_tests/CMakeLists.txt
+++ b/PROX/FOUNDATION/TINY/unit_tests/CMakeLists.txt
@@ -1,25 +1,25 @@
-ADD_SUBDIRECTORY( tiny_axis_angle          )
-ADD_SUBDIRECTORY( tiny_basic_math_types    )
-ADD_SUBDIRECTORY( tiny_clamp               )
-ADD_SUBDIRECTORY( tiny_container           )
-ADD_SUBDIRECTORY( tiny_contiguous_interval )
-ADD_SUBDIRECTORY( tiny_coordsys_prod       )
-ADD_SUBDIRECTORY( tiny_covariance3x3       )
-ADD_SUBDIRECTORY( tiny_degrees_and_radians )
-ADD_SUBDIRECTORY( tiny_eigen               )
-ADD_SUBDIRECTORY( tiny_euler_angles        )
-ADD_SUBDIRECTORY( tiny_invert4x4           )
-ADD_SUBDIRECTORY( tiny_matrix_algebra      )
-ADD_SUBDIRECTORY( tiny_norm_1              )
-ADD_SUBDIRECTORY( tiny_polar_decomposition )
-ADD_SUBDIRECTORY( tiny_polynomial_roots    )
-ADD_SUBDIRECTORY( tiny_power2              )
-ADD_SUBDIRECTORY( tiny_precision           )
-ADD_SUBDIRECTORY( tiny_prime_numbers       )
-ADD_SUBDIRECTORY( tiny_quaternion_algebra  )
-ADD_SUBDIRECTORY( tiny_quaternion_rotate   )
-ADD_SUBDIRECTORY( tiny_traits              )
-ADD_SUBDIRECTORY( tiny_trilinear           )
-ADD_SUBDIRECTORY( tiny_types               )
-ADD_SUBDIRECTORY( tiny_vector_algebra      )
-ADD_SUBDIRECTORY( tiny_truncate            )
+add_subdirectory( tiny_axis_angle          )
+add_subdirectory( tiny_basic_math_types    )
+add_subdirectory( tiny_clamp               )
+add_subdirectory( tiny_container           )
+add_subdirectory( tiny_contiguous_interval )
+add_subdirectory( tiny_coordsys_prod       )
+add_subdirectory( tiny_covariance3x3       )
+add_subdirectory( tiny_degrees_and_radians )
+add_subdirectory( tiny_eigen               )
+add_subdirectory( tiny_euler_angles        )
+add_subdirectory( tiny_invert4x4           )
+add_subdirectory( tiny_matrix_algebra      )
+add_subdirectory( tiny_norm_1              )
+add_subdirectory( tiny_polar_decomposition )
+add_subdirectory( tiny_polynomial_roots    )
+add_subdirectory( tiny_power2              )
+add_subdirectory( tiny_precision           )
+add_subdirectory( tiny_prime_numbers       )
+add_subdirectory( tiny_quaternion_algebra  )
+add_subdirectory( tiny_quaternion_rotate   )
+add_subdirectory( tiny_traits              )
+add_subdirectory( tiny_trilinear           )
+add_subdirectory( tiny_types               )
+add_subdirectory( tiny_vector_algebra      )
+add_subdirectory( tiny_truncate            )
