--- a/PROX/APPLICATIONS/SOFT_BODY/SOFT_BODY_CMD/CMakeLists.txt
+++ b/PROX/APPLICATIONS/SOFT_BODY/SOFT_BODY_CMD/CMakeLists.txt
@@ -48,7 +48,6 @@ target_compile_definitions(soft_body_cmd
 
 install(
   TARGETS soft_body_cmd
-  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/bin/}
-  COMPONENT binary
+  RUNTIME DESTINATION bin
   )
 
